# bikita-it

./: .env.example  .gitignore  .note_register  .todo.json  EVALUATION_REPORT.md  LAUNCH_READINESS.md  QA_LAUNCH_READINESS.md  README.md  check-actions.js  complete_qa_fixes.py  docker-compose.yml  finalize_qa_fixes.py  finalize_validation.py  fix_tests.py  fix_validation.py  harden_project.py  package-lock.json  package.json  shared_files.md  start-dev.cmd  start-wsl.sh  todo.md
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/prisma/: dev.db
apps/web/src-tauri/src/: commands.rs  db.rs  main.rs
apps/web/src-tauri/target-agent/release/.fingerprint/cfg-if-b3e324ec569b289c/: lib-cfg_if
apps/web/src-tauri/target-agent/release/.fingerprint/fastrand-156ed1f2ebe419a1/: lib-fastrand  lib-fastrand.json
apps/web/src-tauri/target-agent/release/.fingerprint/icu_normalizer_data-b72bcaa378f75ffd/: build-script-build-script-build  build-script-build-script-build.json
apps/web/src-tauri/target-agent/release/.fingerprint/icu_properties_data-ee7bf070cfa05ed1/: build-script-build-script-build  build-script-build-script-build.json
apps/web/src-tauri/target-agent/release/.fingerprint/parking_lot_core-b02a1020f4ab287b/: build-script-build-script-build  build-script-build-script-build.json
apps/web/src-tauri/target-agent/release/.fingerprint/phf_generator-4948fa6e39947972/: lib-phf_generator  lib-phf_generator.json
apps/web/src-tauri/target_fresh/: .rustc_info.json
(+623 files in other folders)
